# llm-toolkit

./: .gitignore  Cargo.toml  Makefile  README.md
crates/llm-toolkit/: Cargo.toml  Makefile  README.md
crates/llm-toolkit-expertise/: .cargo-deprecated  Cargo.toml  LICENSE  PHASE2_DESIGN.md  README.md
crates/llm-toolkit-expertise/examples/: agent_with_expertise.rs  basic_expertise.rs  generate_schema.rs  prompt_generation.rs
crates/llm-toolkit-expertise/src/: context.rs  fragment.rs  integration.rs  lib.rs  render.rs  types.rs
crates/llm-toolkit-expertise/tests/: dto_integration_test.rs  integration_test.rs  phase2_integration_test.rs
crates/llm-toolkit-macros/: CHANGELOG.md  Cargo.toml
crates/llm-toolkit-macros/src/: lib.rs
crates/llm-toolkit-macros/tests/: agent_derive_test.rs  bug_report_test.rs  enum_test.rs  nested_schema_test.rs  serde_rename_all_test.rs  variant_rename_test.rs
crates/llm-toolkit-macros/tests/templates/: invalid_syntax.jinja  unknown_variable.jinja
crates/llm-toolkit-macros/tests/ui/: agent_attribute_basic.rs  agent_attribute_custom_inner.rs  agent_attribute_persona_custom_inner.rs  agent_attribute_with_init.rs  agent_attribute_with_proxy_methods.rs  agent_derive_basic.rs  agent_derive_with_backend.rs  template_file_not_found.rs  template_file_not_found.stderr
crates/llm-toolkit/docs/: 01-core-design-principles.md  02-features.md  03-prompt-generation.md  04-intent-extraction-with-intentframe.md  05-type-safe-intents-with-defineintent.md  07-observability.md  08-future-directions.md
crates/llm-toolkit/docs/06-agent-api-and-multi-agent-orchestration/: 00-index.md  01-agent-api-capability-and-intent-separati.md  02-multi-modal-agent-communication-with-pay.md  04-context-aware-detection-enrichment.md  05-high-performance-parallel-execution-with.md  06-parallel-orchestrator-with-human-in-the-.md  07-retrieval-augmented-generation.md  08-direct-api-clients-and-models.md  09-dialogue-context-and-talk-styles.md
crates/llm-toolkit/docs/06-agent-api-and-multi-agent-orchestration/03-multi-agent-orchestration/: 00-index.md  01-core-concepts.md  02-basic-orchestrator-usage.md  03-customizing-internal-agents-wi.md  04-advanced-custom-agents-with-or.md  05-orchestrator-features.md  06-monitoring-orchestrator-execut.md  07-configuring-error-recovery-lim.md  08-rate-limiting-with-minstepinte.md  09-loop-and-early-termination-con.md  10-execution-journal.md  11-strategy-lifecycle-management.md  12-fast-path-intent-generation-pe.md  13-two-layer-error-recovery-retry.md  14-placeholder-syntax-in-intent-t.md  15-using-predefined-strategies.md  16-smart-context-management-with-.md  17-template-based-context-access-.md  18-accessing-intermediate-results.md  19-type-based-output-retrieval-wi.md
crates/llm-toolkit/examples/: agent_attribute.rs  agent_auto_json_test.rs  agent_backend_switching.rs  agent_custom_backend.rs  agent_derive.rs  agent_expertise_toprompt.rs  agent_model_selection.rs  agent_retrieval_aware.rs  agent_retry_test.rs  agent_string_output_test.rs  agent_with_expertise_full.rs  agent_with_profile.rs  agent_with_toprompt_schema.rs  check_agent_availability.rs  check_claude.rs  codex_agent_basic.rs  context_aware_expertise.rs  conversational_agent_builder.rs  define_intent_comprehensive.rs  derive_prompt.rs  derive_prompt_enum.rs  derive_prompt_for.rs  derive_prompt_format_with.rs  derive_prompt_set.rs  dialogue_moderator.rs  dialogue_persona_team.rs  dialogue_session_resumption.rs  dialogue_session_resumption_system_prompt.rs  examples_section_test.rs  execution_profile_demo.rs  expandable_basic.rs  expandable_macro_integration.rs  expandable_with_intent.rs  expertise_basic.rs  expertise_generate_schema.rs  expertise_prompt_generation.rs  external_template.rs  genai_basic.rs  llama_cpp_native_basic.rs  llama_cpp_server_basic.rs  (+26 more)
crates/llm-toolkit/examples/templates/: profile.jinja  project.jinja  project2.jinja
crates/llm-toolkit/src/: attachment.rs  context.rs  intent.rs  lib.rs  models.rs  multimodal.rs  observability.rs  prompt.rs  retrieval.rs
crates/llm-toolkit/src/agent/: agent_based_detector.rs  capability.rs  chat.rs  context_detector.rs  detected_context.rs  dialogue.rs  env_context.rs  error.rs  execution_context.rs  expertise_agent.rs  history.rs  mod.rs  payload.rs  payload_message.rs  persona.rs  retrieval.rs  retry.rs  rule_based_detector.rs
crates/llm-toolkit/src/extract/: extractors.rs  mod.rs
crates/llm-toolkit/src/intent/: expandable.rs  frame.rs
crates/llm-toolkit/src/orchestrator/: blueprint.rs  config.rs  error.rs  journal.rs  lifecycle.rs  mod.rs  parallel_orchestrator.rs  prompts.rs  strategy.rs
crates/llm-toolkit/tests/: agent_string_output_test.rs  collection_nested_type_test.rs  define_intent_multi_tag_test.rs  define_intent_test.rs  derive_enum_integration.rs  derive_enum_struct_variants.rs  derive_enum_tuple_variants.rs  derive_prompt_set.rs  derive_prompt_set_advanced.rs  derive_prompt_set_edge_cases.rs  derive_struct_format_with.rs  enum_nested_enum_type_test.rs  enum_nested_type_test.rs  enum_unified_type_field_prompt_test.rs  enum_unified_type_field_test.rs  execution_journal_test.rs  expertise_agent_integration_test.rs  expertise_dto_integration_test.rs  expertise_integration_test.rs  expertise_phase2_integration_test.rs  external_template_mode_test.rs  external_template_simple_test.rs  external_template_test.rs  multimodal_test.rs  nested_vec_schema_test.rs  option_nested_type_test.rs  orchestrator_dialogue_test.rs  orchestrator_type_marker_test.rs  parallel_orchestrator_hil_test.rs  parallel_orchestrator_test.rs  parallel_orchestrator_timeout_test.rs  parallel_orchestrator_tracing_test.rs  payload_context_test.rs  render_prompt_test.rs  retrieval_aware_agent_test.rs  simple_multi_tag_test.rs  strategy_lifecycle_test.rs  template_debug_test.rs  template_dot_access_test.rs  template_file_integration_test.rs  (+8 more)
crates/llm-toolkit/tests/templates/: integration_test.jinja  invalid_syntax.jinja  simple_mode.jinja  user_profile.jinja  validated.jinja  with_mode.jinja
llm-toolkit-macros/: Cargo.toml
(+41 files in other folders)
