[workspace]
resolver = "2"
members = [
    "crates/llm-toolkit",
    "crates/llm-toolkit-macros",
]

[workspace.package]
version = "0.2.2"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ynishi/llm-toolkit"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
regex = "1.10"
log = "0.4"
anyhow = "1.0"
minijinja = { version = "2.12.0", features = ["serde_json"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"