[workspace]
resolver = "2"
members = [
    "crates/llm-toolkit",
    "crates/llm-toolkit-macros",
    "crates/llm-toolkit-expertise",
]

[workspace.package]
version = "0.57.0"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ynishi/llm-toolkit"

[workspace.dependencies]
llm-toolkit = { path = "crates/llm-toolkit", version = "0.57.0" }
llm-toolkit-macros = { path = "crates/llm-toolkit-macros", version = "0.57.0" }
llm-toolkit-expertise = { path = "crates/llm-toolkit-expertise", version = "0.2.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
log = "0.4"
anyhow = "1.0"
minijinja = { version = "2.12.0", features = ["serde_json", "unstable_machinery"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
base64 = "0.22"
quick-xml = { version = "0.38.3", features = ["serde"] }
rand = "0.8"
futures = "0.3"
