[package]
name = "llm-toolkit-macros"
version = "0.2.0"
edition = "2024"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
description = "Internal procedural macros for llm-toolkit."
repository = "https://github.com/ynishi/llm-toolkit"
license = "MIT"
keywords = ["llm", "ai", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"