[package]
name = "llm-toolkit-expertise"
version = "0.2.1"
description = "⚠️ DEPRECATED: Use llm-toolkit::agent::expertise instead. This crate is archived and will not receive updates."
keywords = ["llm", "ai", "agent", "expertise", "composition"]
categories = ["text-processing"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
integration = ["llm-toolkit", "llm-toolkit/agent"]  # llm-toolkit integration (ToPrompt trait implementation + Agent trait)

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"
llm-toolkit = { workspace = true, optional = true }

[dev-dependencies]
# For testing
