[package]
name = "llm-toolkit-macros"
description = "Internal procedural macros for llm-toolkit."
keywords = ["llm", "ai", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
minijinja = { workspace = true }
regex = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
