[package]
name = "llm-toolkit"
description = "A low-level, unopinionated Rust toolkit for the LLM last mile problem."
keywords = ["llm", "ai", "json", "parser", "prompt"]
categories = ["text-processing", "parsing"]
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
log = { workspace = true, features = ["std"] }
anyhow.workspace = true
base64.workspace = true
minijinja.workspace = true
quick-xml.workspace = true
rand.workspace = true
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
llm-toolkit-macros = { workspace = true, optional = true }
async-trait = "0.1"
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", optional = true }
futures = { workspace = true, optional = true }
url = "2.5"
mime_guess = "2.0"

[dev-dependencies]
strum.workspace = true
strum_macros.workspace = true
env_logger = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3.8"

[features]
default = []
derive = ["llm-toolkit-macros"]
agent = ["tokio", "tokio-util", "futures", "derive", "tracing-subscriber"]

[[example]]
name = "derive_prompt"
required-features = ["derive"]

[[example]]
name = "derive_prompt_enum"
required-features = ["derive"]

[[example]]
name = "derive_prompt_format_with"
required-features = ["derive"]

[[example]]
name = "test_define_intent"
required-features = ["derive"]

[[example]]
name = "define_intent_comprehensive"
required-features = ["derive"]

[[example]]
name = "orchestrator_basic"
required-features = ["agent"]

[[example]]
name = "orchestrator_with_mock"
required-features = ["agent"]

[[example]]
name = "check_claude"
required-features = ["agent"]

[[example]]
name = "agent_derive"
required-features = ["agent"]

[[example]]
name = "agent_backend_switching"
required-features = ["agent"]

[[example]]
name = "check_agent_availability"
required-features = ["agent"]

[[example]]
name = "agent_model_selection"
required-features = ["agent"]

[[example]]
name = "agent_custom_backend"
required-features = ["agent"]

[[example]]
name = "orchestrator_get_typed_output"
required-features = ["agent"]

[[example]]
name = "orchestrator_type_marker_production"
required-features = ["agent"]
